# pointcloud-localizer

./: .gitignore  PROMPTS.md  README.md  pyproject.toml
pointcloud_localizer/: __init__.py  cli.py  evaluate.py  icp.py  loader.py  preprocess.py  synthetic.py
tests/: test_icp.py
