[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pointcloud-localizer"
version = "0.1.0"
description = "Custom ICP-based point cloud registration and evaluation toolkit."
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
  "numpy>=1.25",
  "scipy>=1.11",
  "matplotlib>=3.8",
  "pandas>=2.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]
open3d = [
  "open3d>=0.18.0; python_version < '3.13'",
]

[project.scripts]
pointcloud-localizer = "pointcloud_localizer.cli:main"

[tool.setuptools]
packages = ["pointcloud_localizer"]
